# benchmark-360

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  benchmark_industria_notebook.ipynb  benchmark_industria_notebook2.ipynb  docker-compose.yml  main.py  pyproject.toml  verify_checklist.py
.github/workflows/: daily_benchmark.yml  tests.yml
dashboard/: app.py
docs/: architecture.md  aws_roadmap.md  robots_analysis.md
scripts/: build_demo_dataset.py  debug_gemini_json.py  enrich_and_export.py  generate_notebook.py  generate_notebook.py.bak  inspect_parquet.py  run_pipeline.py  smoke_test_local.py  test_mistral.py  test_pipeline.py  test_sdk.py
src/config/: __init__.py  settings.py
src/models/: isp_plan.py
src/pipeline/: __init__.py  orchestrator.py  parquet_writer.py
src/processors/: __init__.py  arma_tu_plan_handler.py  competitive_alerts.py  guardrails.py  hallucination_detector.py  hybrid_emergency_parser.py  llm_cache.py  llm_client_factory.py  llm_processor.py  market_clustering.py  mistral_vision_client.py  multi_provider_adapter.py  normalizer.py  prompts.py  provider_registry.py  pys_catalog.py  service_normalizer.py  strategic_labels.py  vision_processor.py
src/scrapers/: __init__.py  alfanet_scraper.py  anti_waf_scraper.py  base_scraper.py  claro_scraper.py  cnt_scraper.py  cookie_handler.py  ecuanet_scraper.py  fibramax_scraper.py  isp_registry.py  isp_url_strategy.py  netlife_scraper.py  puntonet_scraper.py  tc_scraper.py  xtrim_scraper.py
src/utils/: company_lookup.py  company_registry.py  errors.py  logger.py  robots_checker.py
tests/: conftest.py  test_errors.py  test_guardrails.py  test_isp_registry.py  test_ml_processors.py  test_multi_llm.py  test_settings.py
tests/unit/: test_base_scraper.py  test_normalizer.py  test_orchestrator.py  test_scrapers_config.py  test_scrapers_factory.py
