# pyproject.toml
# ─────────────────────────────────────────────────────────────────
# Benchmark 360: Automated Competitive Intelligence for ISP Market
# Hackathon Netlife | Python 3.12 | uv
# ─────────────────────────────────────────────────────────────────

[project]
name = "benchmark-360"
version = "0.1.0"
description = "Automated Competitive Intelligence Pipeline for ISP Market in Ecuador"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Equipo Benchmark 360" }
]

keywords = [
    "web-scraping",
    "llm",
    "competitive-intelligence",
    "isp",
    "ecuador",
    "data-pipeline",
]

dependencies = [
    # ── HTTP & Browser ──────────────────────────────────────────
    "httpx>=0.27.0",            # Async HTTP client (reemplaza requests)
    "playwright>=1.44.0",       # Browser automation para JS sites
    "beautifulsoup4>=4.12.0",   # HTML parsing
    "lxml>=5.2.0",              # Parser XML/HTML rápido para BS4
    # ── AI / LLM ────────────────────────────────────────────────
    "openai>=1.30.0",           # GPT-4o-mini + GPT-4o Vision
    # Gemini (Fallback/Alternativa)
    # ── Data Validation ─────────────────────────────────────────
    "pydantic>=2.7.0",          # V2: Schema validation enterprise
    # ── Data Processing ─────────────────────────────────────────
    "pandas>=2.2.0",            # DataFrame manipulation
    "pyarrow>=16.0.0",          # Parquet read/write
    "pillow>=10.3.0",           # Image processing para Vision
    # ── Infrastructure ──────────────────────────────────────────
    "python-dotenv>=1.0.0",     # Variables de entorno
    "loguru>=0.7.0",            # Logging sin configuración
    "tenacity>=8.3.0",          # Retry logic con backoff
    "rich>=13.7.0",             # CLI output profesional
    "fake-useragent>=1.5.0",    # User-Agent rotation
    "mistralai>=1.0.0",
    "google-genai>=1.73.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",            # Test framework
    "pytest-asyncio>=0.23.0",   # Async test support
    "pytest-cov>=5.0.0",        # Coverage reports
    "ruff>=0.4.0",              # Linter + formatter (PEP8)
    "mypy>=1.10.0",             # Static type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff Configuration (PEP8 Compliance) ────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle (Google style)
]
ignore = [
    "D100", # Missing docstring in public module (relajamos para archivos __init__)
    "D104",
]

[tool.ruff.pydocstyle]
convention = "google"  # Google Style Docstrings — OBLIGATORIO del reto

[tool.ruff.isort]
known-first-party = ["src"]

# ── Pytest Configuration ─────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

# ── MyPy Configuration ───────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ── Hatch Build Configuration ────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src"]
